<resources>
    <string name="app_name">finalyearProjectV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Time App</string>
    <string name="nav_header_subtitle">Cameron Leach</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily">Timetable</string>
    <string name="menu_weekly">Edit Timetable</string>
    <string name="menu_tasks">Task Timer</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_send">Send</string>
    <string name="dailyDeadline">Today\'s Deadlines</string>
    <string name="timeDeadline">Time Until Deadline</string>
    <string name="weeklyDeadline">Weekly Deadlines</string>
</resources>
